--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.cesium.unity": "file:../ContentPackages/com.cesium.unity-1.11.0.tgz",
     "com.google.ar.core.arfoundation.extensions": "file:../ContentPackages/arcore-unity-extensions-1.40.0.tgz",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
