--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.google.ar.core.arfoundation.extensions": "file:../ContentPackages/arcore-unity-extensions-1.40.0.tgz",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
