--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "com.cesium.unity": "file:../ContentPackages/com.cesium.unity-1.11.0.tgz",
     "com.google.ar.core.arfoundation.extensions": "file:../ContentPackages/arcore-unity-extensions-1.40.0.tgz",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.services.cloudcode": "2.7.1",
     "com.unity.services.cloudsave": "3.2.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
