--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,9 +6,11 @@
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.services.authentication": "3.2.0",
     "com.unity.services.cloudcode": "2.7.1",
     "com.unity.services.cloudsave": "3.2.0",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.services.deployment": "1.3.0",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
